# LanguageServer.quark

./: LSP.sc  LSPDatabase.sc
Providers/: DocumentationProvider.sc
lsp_runner/: pyproject.toml
lsp_runner/lsp_runner/: main.py
sc_language_server/: main.py  pyproject.toml
