[tool.poetry]
name = "sclsp-agent"
version = "0.1.0"
description = ""
authors = ["Danny Keig <39764493+dannyZyg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sclsp_agent"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinstaller = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 110
